exo: Fix incorrect repeat of keyboard events.

We should not be generating keyboard press events when a key is
already pressed.

Fix this issue by restoring the "pressed keys" set in the
Keyboard class. Seat is still tracking pressed keys in order
to ensure that accelerator key presses are not lost.

Bug: 820641
Test: exo_unittests --gtest_filter=KeyboardTest.OnKeyboardKey
Change-Id: I56c7110361c0894f3fd8d882c45c1d2bfe3d634f
Reviewed-on: https://chromium-review.googlesource.com/967727
Commit-Queue: David Reveman <reveman@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543949}
Former-commit-id: c98d55f133677d5281011be711833a488825ff5f