components/exo/keyboard.cc
@@ -241,28 +241,32 @@ void Keyboard::OnKeyEvent(ui::KeyEvent* event) {
 
   switch (event->type()) {
     case ui::ET_KEY_PRESSED:
-      if (focus_ && !consumed_by_ime && !event->handled()) {
-        uint32_t serial =
-            delegate_->OnKeyboardKey(event->time_stamp(), event->code(), true);
-        if (are_keyboard_key_acks_needed_) {
-          pending_key_acks_.insert(
-              {serial,
-               {*event, base::TimeTicks::Now() +
-                            expiration_delay_for_pending_key_acks_}});
-          event->SetHandled();
+      if (pressed_keys_.insert(event->code()).second) {
+        if (focus_ && !consumed_by_ime && !event->handled()) {
+          uint32_t serial = delegate_->OnKeyboardKey(event->time_stamp(),
+                                                     event->code(), true);
+          if (are_keyboard_key_acks_needed_) {
+            pending_key_acks_.insert(
+                {serial,
+                 {*event, base::TimeTicks::Now() +
+                              expiration_delay_for_pending_key_acks_}});
+            event->SetHandled();
+          }
         }
       }
       break;
     case ui::ET_KEY_RELEASED:
-      if (focus_ && !consumed_by_ime && !event->handled()) {
-        uint32_t serial =
-            delegate_->OnKeyboardKey(event->time_stamp(), event->code(), false);
-        if (are_keyboard_key_acks_needed_) {
-          pending_key_acks_.insert(
-              {serial,
-               {*event, base::TimeTicks::Now() +
-                            expiration_delay_for_pending_key_acks_}});
-          event->SetHandled();
+      if (pressed_keys_.erase(event->code())) {
+        if (focus_ && !consumed_by_ime && !event->handled()) {
+          uint32_t serial = delegate_->OnKeyboardKey(event->time_stamp(),
+                                                     event->code(), false);
+          if (are_keyboard_key_acks_needed_) {
+            pending_key_acks_.insert(
+                {serial,
+                 {*event, base::TimeTicks::Now() +
+                              expiration_delay_for_pending_key_acks_}});
+            event->SetHandled();
+          }
         }
       }
       break;
@@ -336,8 +340,9 @@ void Keyboard::SetFocus(Surface* surface) {
   }
   if (surface) {
     modifier_flags_ = seat_->modifier_flags() & kModifierMask;
+    pressed_keys_ = seat_->pressed_keys();
     delegate_->OnKeyboardModifiers(modifier_flags_);
-    delegate_->OnKeyboardEnter(surface, seat_->pressed_keys());
+    delegate_->OnKeyboardEnter(surface, pressed_keys_);
     focus_ = surface;
     focus_->AddSurfaceObserver(this);
   }
